regular commit to save work

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-form {
+/*form {
   position: fixed;
   width: 550px;
   height: 250px;
@@ -56,4 +56,4 @@ thead {
 td {
   padding: 20px;
   border: solid 1px black;
-}
+}*/
