--- a/style.css
+++ b/style.css
@@ -1,59 +1,144 @@
-/*form {
-  position: fixed;
-  width: 550px;
-  height: 250px;
-  margin-left: -550px;
-  padding: 15px;
-  font-family: helvetica;
-  color: #2c3126;
-  background-color: #508E47;
-  border-radius: 0px 10px 10px 0px;
-  border: solid 2px black;
-  transition: 350ms all;
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
-form:hover{
-  margin-left: 0px
+a{
+	color: #2c3126;
+	text-decoration: none;
 }
 
-fieldset {
-  padding: 15px;
-  width: 450px;
-  border: none;
+/*element styles*/
+header{
+	width: 100%;
+	height: 100px;
+	border-bottom: 3px solid #2c3126;
 }
 
-input {
-  padding: 5px;
-  width: 175px;
-  border: solid 1px #2c3126;
-  border-radius: 3px;
+header div {
+	position: relative;
+	width: 960px;
+	margin: 0 auto;
 }
 
-input:focus {
-  background: #555;
-  color: white;
+#head-logo {
+	float: left;
+	height: 100px;
 }
 
-#store-add {
-  float: right;
-  margin-right: -80px;
-  margin-top: 100px;
-  transform: rotate(90deg);
-  color: #CCCE51;
-  font-size: 35px;
-  margin-bottom: 100px;
-  margin-left: -100px;
+header div nav ul li{
+	display: inline-block;
+	float: right;
+	margin-top: 50px;
 }
 
-section {
-  margin-left: 40px;
+header div nav ul li a {
+	font-size: 30px;
+	margin-top: 1000px;
 }
 
-thead {
-  background: #888;
+a:hover {
+	color: #bbb;
 }
 
-td {
-  padding: 20px;
-  border: solid 1px black;
-}*/
+.social-links img{
+	height: 50px;
+	margin-left: 20px;
+}
+
+main {
+	text-align: center;
+	width: 960px;
+	margin: 0 auto;
+	color: #2c3126;
+}
+
+main h1 {
+	font-size: 5px
+}
+
+main img {
+	width: 100%;
+}
+
+section img {
+	float: left;
+
+}
+
+h2 {
+	margin-top: 35px;
+	margin-bottom: 20px;
+	font-size: 50px;
+	color: #2c3126;
+	font-family: 'Open Sans', sans-serif;
+}
+
+p {
+	font-family: helvetica;
+	font-size: 20px;
+}
+
+main li {
+	font-family: helvetica;
+	font-size: 25px;
+	padding: 5px;
+}
+
+footer {
+	height: 50px;
+	width: 100%;
+	margin-top: 40px;
+	text-align: center;
+	font-size: 20px;
+	font-family: helvetica;
+	border-top: 3px solid #2c3126;
+}
+
+footer p {
+	margin-top: 20px;
+}
